[pl][blog] autokorekta - fix dark mode issues

--- a/assets/dark.scss
+++ b/assets/dark.scss
@@ -253,4 +253,12 @@ body[data-theme="dark"] {
       color: $primary;
     }
   }
+
+  .alert-warning a.btn-primary {
+    color: $white;
+  }
+
+  .badge.bg-dark {
+    color: $black;
+  }
 }
